--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,47 @@
+.header{
+  color:aliceblue;
+  font-size: 15px;
+  font-weight:600;
+  font-family: 'Nunito Semibold','Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 .search {
-  width: 60%;
+  /* width: 60%; */
   background-color: aliceblue;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
   border-radius: 40px;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 .search > input {
   background-color: aliceblue;
+  outline:none;
+  font-size: 20px;
 }
 .search > img{
 background-color: aliceblue;
+height:40px;
+width: 40px;
+
+}
+.header-content{
+  display:flex;
+  flex-direction: column;
+  max-width: 960px;
+  width:60%;
+  margin: 0 auto;
+  text-align: center;
+}
+.movies-container{
+  /* max-width: 690px; */
+  height:60vh;
+  width: 85%;
+  border: 5px solid rgb(9, 131, 74);
+  margin-top: 40px;
+  color:white;
+  margin-top: 40px;
+}
+.footer{
+  color:white;
 }
