--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,10 @@
   border:0;
   padding: 0;
   box-sizing: border-box;
-  background-color: rgb(111, 47, 47);
+  /* background-color: rgb(111, 47, 47); */
 }
-.container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+body{
+    background-image: linear-gradient(to bottom,rgb(10, 137, 10),rgb(101, 88, 247),rgb(53, 227, 249));
 }
+
 
