--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-.header{
-  color:aliceblue;
+.header {
+  color: aliceblue;
   font-size: 15px;
-  font-weight:600;
-  font-family: 'Nunito Semibold','Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 600;
+  font-family: "Nunito Semibold", "Trebuchet MS", "Lucida Sans Unicode",
+    "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 .search {
   /* width: 60%; */
@@ -10,38 +11,36 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 10px 15px;
   border-radius: 40px;
   margin-top: 20px;
 }
 .search > input {
   background-color: aliceblue;
-  outline:none;
+  outline: none;
   font-size: 20px;
 }
-.search > img{
-background-color: aliceblue;
-height:40px;
-width: 40px;
-
+.search > img {
+  background-color: aliceblue;
+  height: 40px;
+  width: 40px;
 }
-.header-content{
-  display:flex;
+.header-content {
+  display: flex;
   flex-direction: column;
   max-width: 960px;
-  width:60%;
+  width: 60%;
   margin: 0 auto;
   text-align: center;
 }
-.movies-container{
-  /* max-width: 690px; */
-  height:60vh;
-  width: 85%;
-  border: 5px solid rgb(9, 131, 74);
-  margin-top: 40px;
-  color:white;
-  margin-top: 40px;
+.movies-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 350px);
+  grid-gap: 10px;
+  width: 80%;
+  margin: 20px auto;
 }
-.footer{
-  color:white;
+.footer {
+  color: white;
 }
